# name: TestAcquire.test_ok
  <class 'dict'> {
    'acquired': True,
    'archived': False,
    'args': <class 'dict'> {
      'fact': 'LdJCGRddpwdyFKunVyUD',
      'nearly': 951.93581531826,
      'network': 'fhKcDVBJbHFDutYbbXjg',
      'season': 6981,
      'task': 'RrnFxjyvDAqsRnDaMrco',
      'third': 'SUEXExIZVPeFzGRmMglP',
    },
    'created_at': <class 'str'>,
    'id': 'fb085f7f',
    'key': <class 'str'>,
    'ping': None,
    'progress': 3,
    'rights': <class 'dict'> {
    },
    'stage': None,
    'state': 'preparing',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': <class 'str'>,
      },
      <class 'dict'> {
        'error': None,
        'progress': 3,
        'stage': None,
        'state': 'preparing',
        'step_description': None,
        'step_name': None,
        'timestamp': <class 'str'>,
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflow': 'jobs_pathoscope_bowtie',
  }
---
# name: TestArchive.test_already_archived
  <class 'dict'> {
    'id': 'bad_request',
    'message': 'Job already archived',
  }
---
# name: TestArchive.test_ok
  <class 'dict'> {
    'acquired': False,
    'archived': True,
    'args': <class 'dict'> {
      'fact': 'LdJCGRddpwdyFKunVyUD',
      'nearly': 951.93581531826,
      'network': 'fhKcDVBJbHFDutYbbXjg',
      'season': 6981,
      'task': 'RrnFxjyvDAqsRnDaMrco',
      'third': 'SUEXExIZVPeFzGRmMglP',
    },
    'created_at': <class 'str'>,
    'id': '7cf872dc',
    'ping': None,
    'progress': 10,
    'rights': <class 'dict'> {
    },
    'stage': 'NzFJEUSgqMReEKilxKJT',
    'state': 'preparing',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': <class 'str'>,
      },
      <class 'dict'> {
        'error': None,
        'progress': 10,
        'stage': 'NzFJEUSgqMReEKilxKJT',
        'state': 'preparing',
        'step_description': 'bTDOKidKxUVFacqRcQYv',
        'step_name': 'NzFJEUSgqMReEKilxKJT',
        'timestamp': <class 'str'>,
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'fb085f7f',
    },
    'workflow': 'jobs_pathoscope_bowtie',
  }
---
# name: TestFind.test_archived[False]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'preparing': <class 'dict'> {
        'jobs_pathoscope_bowtie': 2,
      },
      'terminated': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': 'f60bae36',
        'progress': 30,
        'stage': 'DIkAgfVgUyxrvtDrQmmy',
        'state': 'terminated',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_create_subtraction',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': 'da42dca3',
        'progress': 10,
        'stage': 'sypWXHjZfEiUXPqmNpvc',
        'state': 'preparing',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_pathoscope_bowtie',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '7cf872dc',
        'progress': 10,
        'stage': 'NzFJEUSgqMReEKilxKJT',
        'state': 'preparing',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_pathoscope_bowtie',
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 5,
  }
---
# name: TestFind.test_archived[True]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'preparing': <class 'dict'> {
        'jobs_pathoscope_bowtie': 2,
      },
      'terminated': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': True,
        'created_at': <class 'str'>,
        'id': '09d01419',
        'progress': 200,
        'stage': 'HvmTcGnACunlspFVxYyD',
        'state': 'timeout',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_create_subtraction',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': <class 'str'>,
        'id': '3cbb22cc',
        'progress': 50,
        'stage': 'iWmLrWzhUFeKQsbyxfOb',
        'state': 'error',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_nuvs',
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 5,
  }
---
# name: TestFind.test_basic
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'jobs_build_index': 1,
        'jobs_pathoscope_bowtie': 1,
      },
      'error': <class 'dict'> {
        'jobs_build_index': 1,
      },
      'preparing': <class 'dict'> {
        'jobs_create_sample': 1,
        'jobs_create_subtraction': 2,
        'jobs_pathoscope_bowtie': 2,
      },
      'timeout': <class 'dict'> {
        'jobs_aodp': 1,
      },
      'waiting': <class 'dict'> {
        'jobs_build_index': 1,
        'jobs_pathoscope_bowtie': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '9c61c0ca',
        'progress': 30,
        'stage': 'VcZLZHaJlZWSKnWQGikD',
        'state': 'error',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': '7cf872dc',
        },
        'workflow': 'jobs_build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '7cce8f87',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': '7cf872dc',
        },
        'workflow': 'jobs_pathoscope_bowtie',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '83e4c4f6',
        'progress': 30,
        'stage': 'bfLQjQXFCbvyXwaDdZIL',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': '7cf872dc',
        },
        'workflow': 'jobs_pathoscope_bowtie',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '606cd773',
        'progress': 10,
        'stage': 'ahFNhHiNQGdooyOEZKhY',
        'state': 'preparing',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': '7cf872dc',
        },
        'workflow': 'jobs_pathoscope_bowtie',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '031ff6cb',
        'progress': 10,
        'stage': 'KbklJQhxeoHuMWUpIFQt',
        'state': 'preparing',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': '7cf872dc',
        },
        'workflow': 'jobs_create_subtraction',
      },
    ],
    'found_count': 11,
    'page': 1,
    'page_count': 3,
    'per_page': 5,
    'total_count': 11,
  }
---
# name: TestFind.test_state[cancelled]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'complete': <class 'dict'> {
        'jobs_create_sample': 3,
      },
      'error': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'preparing': <class 'dict'> {
        'jobs_pathoscope_bowtie': 1,
      },
      'running': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'terminated': <class 'dict'> {
        'jobs_create_sample': 1,
        'jobs_pathoscope_bowtie': 1,
      },
      'timeout': <class 'dict'> {
        'jobs_aodp': 2,
        'jobs_create_sample': 1,
      },
      'waiting': <class 'dict'> {
        'jobs_build_index': 1,
        'jobs_create_subtraction': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '606cd773',
        'progress': 40,
        'stage': 'JYyyWZRluqmAayuXQwcO',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_create_subtraction',
      },
    ],
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 14,
  }
---
# name: TestFind.test_state[complete]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'complete': <class 'dict'> {
        'jobs_create_sample': 3,
      },
      'error': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'preparing': <class 'dict'> {
        'jobs_pathoscope_bowtie': 1,
      },
      'running': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'terminated': <class 'dict'> {
        'jobs_create_sample': 1,
        'jobs_pathoscope_bowtie': 1,
      },
      'timeout': <class 'dict'> {
        'jobs_aodp': 2,
        'jobs_create_sample': 1,
      },
      'waiting': <class 'dict'> {
        'jobs_build_index': 1,
        'jobs_create_subtraction': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '4af2da8b',
        'progress': 90,
        'stage': 'qwegICYNsZelwHKodoWl',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '83e4c4f6',
        'progress': 120,
        'stage': 'UvOzbGhKHMlkVUcOgMpv',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': 'f60bae36',
        'progress': 50,
        'stage': 'VbGTsMJmpeTNOTvcKIHC',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': '7cf872dc',
        },
        'workflow': 'jobs_create_sample',
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 14,
  }
---
# name: TestFind.test_state[error]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'complete': <class 'dict'> {
        'jobs_create_sample': 3,
      },
      'error': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'preparing': <class 'dict'> {
        'jobs_pathoscope_bowtie': 1,
      },
      'running': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'terminated': <class 'dict'> {
        'jobs_create_sample': 1,
        'jobs_pathoscope_bowtie': 1,
      },
      'timeout': <class 'dict'> {
        'jobs_aodp': 2,
        'jobs_create_sample': 1,
      },
      'waiting': <class 'dict'> {
        'jobs_build_index': 1,
        'jobs_create_subtraction': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '031ff6cb',
        'progress': 70,
        'stage': 'kXjEpGpwJnLsgFiwudKJ',
        'state': 'error',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': '7cf872dc',
        },
        'workflow': 'jobs_create_subtraction',
      },
    ],
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 14,
  }
---
# name: TestFind.test_state[preparing]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'complete': <class 'dict'> {
        'jobs_create_sample': 3,
      },
      'error': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'preparing': <class 'dict'> {
        'jobs_pathoscope_bowtie': 1,
      },
      'running': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'terminated': <class 'dict'> {
        'jobs_create_sample': 1,
        'jobs_pathoscope_bowtie': 1,
      },
      'timeout': <class 'dict'> {
        'jobs_aodp': 2,
        'jobs_create_sample': 1,
      },
      'waiting': <class 'dict'> {
        'jobs_build_index': 1,
        'jobs_create_subtraction': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': 'da42dca3',
        'progress': 10,
        'stage': 'lZEijfQSbBNkznHZPGfx',
        'state': 'preparing',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': '7cf872dc',
        },
        'workflow': 'jobs_pathoscope_bowtie',
      },
    ],
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 14,
  }
---
# name: TestFind.test_state[running]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'complete': <class 'dict'> {
        'jobs_create_sample': 3,
      },
      'error': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'preparing': <class 'dict'> {
        'jobs_pathoscope_bowtie': 1,
      },
      'running': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'terminated': <class 'dict'> {
        'jobs_create_sample': 1,
        'jobs_pathoscope_bowtie': 1,
      },
      'timeout': <class 'dict'> {
        'jobs_aodp': 2,
        'jobs_create_sample': 1,
      },
      'waiting': <class 'dict'> {
        'jobs_build_index': 1,
        'jobs_create_subtraction': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '09d01419',
        'progress': 20,
        'stage': 'GABAXhUvefdviXPwvzSq',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': '7cf872dc',
        },
        'workflow': 'jobs_create_subtraction',
      },
    ],
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 14,
  }
---
# name: TestFind.test_state[terminated]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'complete': <class 'dict'> {
        'jobs_create_sample': 3,
      },
      'error': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'preparing': <class 'dict'> {
        'jobs_pathoscope_bowtie': 1,
      },
      'running': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'terminated': <class 'dict'> {
        'jobs_create_sample': 1,
        'jobs_pathoscope_bowtie': 1,
      },
      'timeout': <class 'dict'> {
        'jobs_aodp': 2,
        'jobs_create_sample': 1,
      },
      'waiting': <class 'dict'> {
        'jobs_build_index': 1,
        'jobs_create_subtraction': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '0927410c',
        'progress': 100,
        'stage': 'JtxXLMnKiDpZjZnuBHqL',
        'state': 'terminated',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': '7cf872dc',
        },
        'workflow': 'jobs_pathoscope_bowtie',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '7cce8f87',
        'progress': 80,
        'stage': 'kpKHMuheGijFsETwMgiw',
        'state': 'terminated',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_create_sample',
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 14,
  }
---
# name: TestFind.test_state[timeout]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'complete': <class 'dict'> {
        'jobs_create_sample': 3,
      },
      'error': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'preparing': <class 'dict'> {
        'jobs_pathoscope_bowtie': 1,
      },
      'running': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'terminated': <class 'dict'> {
        'jobs_create_sample': 1,
        'jobs_pathoscope_bowtie': 1,
      },
      'timeout': <class 'dict'> {
        'jobs_aodp': 2,
        'jobs_create_sample': 1,
      },
      'waiting': <class 'dict'> {
        'jobs_build_index': 1,
        'jobs_create_subtraction': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '4938a221',
        'progress': 60,
        'stage': 'lVypwMSQgYyXiWkToRiS',
        'state': 'timeout',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_aodp',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '7aa59bf4',
        'progress': 40,
        'stage': 'DXsGqOFZahcgWXyXQOMj',
        'state': 'timeout',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '3cbb22cc',
        'progress': 30,
        'stage': 'kEahrPLrGciZpuCpymcj',
        'state': 'timeout',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_aodp',
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 14,
  }
---
# name: TestFind.test_state[waiting]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'complete': <class 'dict'> {
        'jobs_create_sample': 3,
      },
      'error': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'preparing': <class 'dict'> {
        'jobs_pathoscope_bowtie': 1,
      },
      'running': <class 'dict'> {
        'jobs_create_subtraction': 1,
      },
      'terminated': <class 'dict'> {
        'jobs_create_sample': 1,
        'jobs_pathoscope_bowtie': 1,
      },
      'timeout': <class 'dict'> {
        'jobs_aodp': 2,
        'jobs_create_sample': 1,
      },
      'waiting': <class 'dict'> {
        'jobs_build_index': 1,
        'jobs_create_subtraction': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '9c61c0ca',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': '7cf872dc',
        },
        'workflow': 'jobs_build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '153ff459',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_create_subtraction',
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 14,
  }
---
# name: TestFind.test_state_invalid
  <class 'list'> [
    <class 'dict'> {
      'in': 'query string',
      'loc': <class 'list'> [
        'state',
        0,
      ],
      'msg': "value is not a valid enumeration member; permitted: 'cancelled', 'complete', 'error', 'preparing', 'running', 'timeout', 'terminated', 'waiting'",
      'type': 'type_error.enum',
    },
  ]
---
# name: TestFind.test_user[user_1]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'error': <class 'dict'> {
        'jobs_create_sample': 1,
        'jobs_pathoscope_bowtie': 1,
      },
      'preparing': <class 'dict'> {
        'jobs_create_sample': 1,
      },
      'running': <class 'dict'> {
        'jobs_nuvs': 1,
      },
      'waiting': <class 'dict'> {
        'jobs_build_index': 1,
        'jobs_pathoscope_bowtie': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '7aa59bf4',
        'progress': 33,
        'stage': 'wFBnmgOfMmoMIMASgHgM',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': 'f60bae36',
        'progress': 40,
        'stage': 'dTJMIacGZTKLlNofxriv',
        'state': 'error',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': 'da42dca3',
        'progress': 33,
        'stage': 'SPTxttBbePAFdwNpUvYR',
        'state': 'error',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_pathoscope_bowtie',
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 6,
  }
---
# name: TestFind.test_user[user_1_and_2]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'error': <class 'dict'> {
        'jobs_create_sample': 1,
        'jobs_pathoscope_bowtie': 1,
      },
      'preparing': <class 'dict'> {
        'jobs_create_sample': 1,
      },
      'running': <class 'dict'> {
        'jobs_nuvs': 1,
      },
      'waiting': <class 'dict'> {
        'jobs_build_index': 1,
        'jobs_pathoscope_bowtie': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '7aa59bf4',
        'progress': 33,
        'stage': 'wFBnmgOfMmoMIMASgHgM',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '153ff459',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': '7cf872dc',
        },
        'workflow': 'jobs_pathoscope_bowtie',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': 'f60bae36',
        'progress': 40,
        'stage': 'dTJMIacGZTKLlNofxriv',
        'state': 'error',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '09d01419',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': '7cf872dc',
        },
        'workflow': 'jobs_build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': 'da42dca3',
        'progress': 33,
        'stage': 'SPTxttBbePAFdwNpUvYR',
        'state': 'error',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_pathoscope_bowtie',
      },
    ],
    'found_count': 5,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 6,
  }
---
# name: TestFind.test_user[user_2]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'error': <class 'dict'> {
        'jobs_create_sample': 1,
        'jobs_pathoscope_bowtie': 1,
      },
      'preparing': <class 'dict'> {
        'jobs_create_sample': 1,
      },
      'running': <class 'dict'> {
        'jobs_nuvs': 1,
      },
      'waiting': <class 'dict'> {
        'jobs_build_index': 1,
        'jobs_pathoscope_bowtie': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '153ff459',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': '7cf872dc',
        },
        'workflow': 'jobs_pathoscope_bowtie',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '09d01419',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': '7cf872dc',
        },
        'workflow': 'jobs_build_index',
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 6,
  }
---
# name: TestPushStatus.test[None]
  <class 'dict'> {
    'error': None,
    'progress': 23,
    'stage': 'build',
    'state': 'running',
    'step_description': None,
    'step_name': None,
    'timestamp': '2015-10-06T20:00:00Z',
  }
---
# name: TestPushStatus.test_bad_state
  <class 'dict'> {
    'errors': <class 'dict'> {
      'state': <class 'list'> [
        'unallowed value bad',
      ],
    },
    'id': 'invalid_input',
    'message': 'Invalid input',
  }
---
# name: TestPushStatus.test_error[invalid-invalid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[invalid-invalid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[invalid-invalid-valid]
  <class 'tuple'> (
    201,
    <class 'dict'> {
      'error': <class 'dict'> {
        'details': <class 'list'> [
          'Valid',
        ],
        'traceback': <class 'list'> [
          'Valid',
        ],
        'type': 'KeyError',
      },
      'progress': 14,
      'stage': 'fastqc',
      'state': 'error',
      'step_description': None,
      'step_name': None,
      'timestamp': '2015-10-06T20:00:00Z',
    },
  )
---
# name: TestPushStatus.test_error[invalid-missing-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[invalid-missing-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[invalid-missing-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[invalid-valid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[invalid-valid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[invalid-valid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[missing-invalid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[missing-invalid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[missing-invalid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[missing-missing-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[missing-missing-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[missing-missing-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[missing-valid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[missing-valid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[missing-valid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[valid-invalid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[valid-invalid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[valid-invalid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[valid-missing-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[valid-missing-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[valid-missing-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[valid-valid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[valid-valid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[valid-valid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_missing_error
  <class 'tuple'> (
    400,
    <class 'dict'> {
      'id': 'bad_request',
      'message': 'Missing error information',
    },
  )
---
# name: TestPushStatus.test_name_and_description
  <class 'dict'> {
    'error': None,
    'progress': 14,
    'stage': 'fastqc',
    'state': 'running',
    'step_description': 'Run FastQC on the raw data',
    'step_name': 'FastQC',
    'timestamp': '2015-10-06T20:00:00Z',
  }
---
# name: test_acquire[None]
  <class 'dict'> {
    'acquired': True,
    'archived': False,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'key': 'key',
    'ping': None,
    'progress': 3,
    'rights': <class 'dict'> {
    },
    'stage': None,
    'state': 'preparing',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 1,
        'stage': 'import_results',
        'state': 'complete',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 3,
        'stage': None,
        'state': 'preparing',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflow': 'build_index',
  }
---
# name: test_archive[None]
  <class 'dict'> {
    'acquired': False,
    'archived': True,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'ping': None,
    'progress': 1,
    'rights': <class 'dict'> {
    },
    'stage': 'import_results',
    'state': 'complete',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 1,
        'stage': 'import_results',
        'state': 'complete',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflow': 'build_index',
  }
---
# name: test_bulk_archive[None]
  <class 'list'> [
    <class 'dict'> {
      'archived': True,
      'created_at': '2019-03-07T23:20:30Z',
      'id': '7467tozj',
      'progress': 95,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'bob',
        'id': 'bf1b993c',
      },
      'workflow': 'build_index',
    },
    <class 'dict'> {
      'archived': True,
      'created_at': '2017-09-21T03:00:07Z',
      'id': '8cy4mjvp',
      'progress': 97,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'bob',
        'id': 'bf1b993c',
      },
      'workflow': 'build_index',
    },
    <class 'dict'> {
      'archived': True,
      'created_at': '2024-08-23T20:27:15Z',
      'id': '8vvqvnuk',
      'progress': 90,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'bob',
        'id': 'bf1b993c',
      },
      'workflow': 'nuvs',
    },
    <class 'dict'> {
      'archived': True,
      'created_at': '2021-08-30T04:32:27Z',
      'id': 'awvuon9b',
      'progress': 66,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'bob',
        'id': 'bf1b993c',
      },
      'workflow': 'pathoscope',
    },
    <class 'dict'> {
      'archived': True,
      'created_at': '2023-02-28T08:11:58Z',
      'id': 'sk1wj693',
      'progress': 82,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'bob',
        'id': 'bf1b993c',
      },
      'workflow': 'create_sample',
    },
  ]
---
# name: test_cancel[None]
  <class 'dict'> {
    'acquired': False,
    'archived': False,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'ping': None,
    'progress': 0,
    'rights': <class 'dict'> {
    },
    'stage': 'mk_analysis_dir',
    'state': 'running',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'laura56',
      'id': '7cf872dc',
    },
    'workflow': 'build_index',
  }
---
# name: test_find_beta[None-None-False]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2025-08-31T21:25:22Z',
        'id': 'fczq56va',
        'progress': 100,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2024-08-22T18:08:27Z',
        'id': '8vvqvnuk',
        'progress': 90,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2024-05-31T18:03:22Z',
        'id': 't894ea8p',
        'progress': 94,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2023-02-26T20:43:23Z',
        'id': 'sk1wj693',
        'progress': 82,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2021-08-28T19:55:40Z',
        'id': 'awvuon9b',
        'progress': 66,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2019-08-20T07:38:55Z',
        'id': '5k9d4ocj',
        'progress': 97,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2019-03-06T19:40:07Z',
        'id': '7467tozj',
        'progress': 95,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-12-20T22:49:01Z',
        'id': 'bhjlnu44',
        'progress': 100,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-09-19T15:00:31Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
    ],
    'found_count': 9,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[None-None-None]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2025-08-31T21:25:22Z',
        'id': 'fczq56va',
        'progress': 100,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2024-08-22T18:08:27Z',
        'id': '8vvqvnuk',
        'progress': 90,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2024-05-31T18:03:22Z',
        'id': 't894ea8p',
        'progress': 94,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2024-03-13T11:48:20Z',
        'id': '3cvzfiqz',
        'progress': 85,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2023-02-26T20:43:23Z',
        'id': 'sk1wj693',
        'progress': 82,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2021-08-28T19:55:40Z',
        'id': 'awvuon9b',
        'progress': 66,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2021-04-11T17:06:04Z',
        'id': 'v68r5j2t',
        'progress': 81,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2019-08-30T17:41:05Z',
        'id': 'wrw4i0eh',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'aodp',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2019-08-20T07:38:55Z',
        'id': '5k9d4ocj',
        'progress': 97,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2019-04-24T16:02:53Z',
        'id': 'w4cckpcq',
        'progress': 51,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2019-03-06T19:40:07Z',
        'id': '7467tozj',
        'progress': 95,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-12-20T22:49:01Z',
        'id': 'bhjlnu44',
        'progress': 100,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-09-19T15:00:31Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2017-08-03T02:15:04Z',
        'id': 'zc7h2ftd',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2016-03-23T13:37:46Z',
        'id': '4jua0mbk',
        'progress': 99,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
    ],
    'found_count': 15,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[None-None-True]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': True,
        'created_at': '2024-03-13T11:48:20Z',
        'id': '3cvzfiqz',
        'progress': 85,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2021-04-11T17:06:04Z',
        'id': 'v68r5j2t',
        'progress': 81,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2019-08-30T17:41:05Z',
        'id': 'wrw4i0eh',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'aodp',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2019-04-24T16:02:53Z',
        'id': 'w4cckpcq',
        'progress': 51,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2017-08-03T02:15:04Z',
        'id': 'zc7h2ftd',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2016-03-23T13:37:46Z',
        'id': '4jua0mbk',
        'progress': 99,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
    ],
    'found_count': 6,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[None-running-False]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2025-08-31T21:25:22Z',
        'id': 'fczq56va',
        'progress': 100,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-09-19T15:00:31Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[None-running-None]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2025-08-31T21:25:22Z',
        'id': 'fczq56va',
        'progress': 100,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-09-19T15:00:31Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[None-running-True]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[bob-None-False]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[bob-None-None]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[bob-None-True]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[bob-running-False]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[bob-running-None]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[bob-running-True]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[users2-None-False]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2025-08-31T21:25:22Z',
        'id': 'fczq56va',
        'progress': 100,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2024-08-22T18:08:27Z',
        'id': '8vvqvnuk',
        'progress': 90,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2024-05-31T18:03:22Z',
        'id': 't894ea8p',
        'progress': 94,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2023-02-26T20:43:23Z',
        'id': 'sk1wj693',
        'progress': 82,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2021-08-28T19:55:40Z',
        'id': 'awvuon9b',
        'progress': 66,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2019-08-20T07:38:55Z',
        'id': '5k9d4ocj',
        'progress': 97,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2019-03-06T19:40:07Z',
        'id': '7467tozj',
        'progress': 95,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-12-20T22:49:01Z',
        'id': 'bhjlnu44',
        'progress': 100,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-09-19T15:00:31Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
    ],
    'found_count': 9,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[users2-None-None]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2025-08-31T21:25:22Z',
        'id': 'fczq56va',
        'progress': 100,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2024-08-22T18:08:27Z',
        'id': '8vvqvnuk',
        'progress': 90,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2024-05-31T18:03:22Z',
        'id': 't894ea8p',
        'progress': 94,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2024-03-13T11:48:20Z',
        'id': '3cvzfiqz',
        'progress': 85,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2023-02-26T20:43:23Z',
        'id': 'sk1wj693',
        'progress': 82,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2021-08-28T19:55:40Z',
        'id': 'awvuon9b',
        'progress': 66,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2021-04-11T17:06:04Z',
        'id': 'v68r5j2t',
        'progress': 81,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2019-08-30T17:41:05Z',
        'id': 'wrw4i0eh',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'aodp',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2019-08-20T07:38:55Z',
        'id': '5k9d4ocj',
        'progress': 97,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2019-04-24T16:02:53Z',
        'id': 'w4cckpcq',
        'progress': 51,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2019-03-06T19:40:07Z',
        'id': '7467tozj',
        'progress': 95,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-12-20T22:49:01Z',
        'id': 'bhjlnu44',
        'progress': 100,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-09-19T15:00:31Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2017-08-03T02:15:04Z',
        'id': 'zc7h2ftd',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2016-03-23T13:37:46Z',
        'id': '4jua0mbk',
        'progress': 99,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
    ],
    'found_count': 15,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[users2-None-True]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': True,
        'created_at': '2024-03-13T11:48:20Z',
        'id': '3cvzfiqz',
        'progress': 85,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2021-04-11T17:06:04Z',
        'id': 'v68r5j2t',
        'progress': 81,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2019-08-30T17:41:05Z',
        'id': 'wrw4i0eh',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'aodp',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2019-04-24T16:02:53Z',
        'id': 'w4cckpcq',
        'progress': 51,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2017-08-03T02:15:04Z',
        'id': 'zc7h2ftd',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2016-03-23T13:37:46Z',
        'id': '4jua0mbk',
        'progress': 99,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
    ],
    'found_count': 6,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[users2-running-False]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2025-08-31T21:25:22Z',
        'id': 'fczq56va',
        'progress': 100,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-09-19T15:00:31Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[users2-running-None]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2025-08-31T21:25:22Z',
        'id': 'fczq56va',
        'progress': 100,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-09-19T15:00:31Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[users2-running-True]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_get[None]
  <class 'dict'> {
    'acquired': False,
    'archived': False,
    'args': <class 'dict'> {
      'fact': 'LdJCGRddpwdyFKunVyUD',
      'nearly': 951.93581531826,
      'network': 'fhKcDVBJbHFDutYbbXjg',
      'season': 6981,
      'task': 'RrnFxjyvDAqsRnDaMrco',
      'third': 'SUEXExIZVPeFzGRmMglP',
    },
    'created_at': <class 'str'>,
    'id': '7cf872dc',
    'ping': None,
    'progress': 10,
    'rights': <class 'dict'> {
    },
    'stage': 'NzFJEUSgqMReEKilxKJT',
    'state': 'preparing',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': <class 'str'>,
      },
      <class 'dict'> {
        'error': None,
        'progress': 10,
        'stage': 'NzFJEUSgqMReEKilxKJT',
        'state': 'preparing',
        'step_description': 'bTDOKidKxUVFacqRcQYv',
        'step_name': 'NzFJEUSgqMReEKilxKJT',
        'timestamp': <class 'str'>,
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'fb085f7f',
    },
    'workflow': 'jobs_pathoscope_bowtie',
  }
---
# name: test_ping[None]
  <class 'dict'> {
    'pinged_at': '2015-10-06T20:00:00Z',
  }
---
